src/main/resources/module/styles/rdf-transform-dialog.css
/*
 * General Settings
 */

.emphasized,
.rdf-header-text {
    font-weight: bold;
}

.view-disabled {
    opacity: 0.6;
    filter: grayscale(100%);
}

p.rdf-transform-base-iri {
    margin: 6px 0 4px 0;
}

input[type="radio"] {
    display: inline-block;
    margin-top: -1px;
    vertical-align: middle;
}

input[type="number"] {
    display: inline-block;
    margin-top: -1px;
    vertical-align: middle;
}

pre {
    font-family: Consolas,"courier new";
    background-color: #f1f1f1;
    font-size: 100%;
}

/*
 * RDF Transform Dialog
 */

div.rdf-transform-dialog-frame {
    width:  800px;
    height: 600px;
    min-width:  800px;
    min-height: 600px;
}

/*
div.dialog-header,
div.dialog-body,
div.dialog-footer,
div.dialog-body-head,
ul.rdf-transform-tab-titles,
div.tab,
div.rdf-transform-menu-search
div.rdf-transform-property-container
div.rdf-transform-node-container
.rdf-transform-iri-text
#rdf-transform-base-iri-value {
}
*/

table.rdf-transform-pane-table-layout,
table.rdf-transform-property-table-layout,
table.rdf-transform-node-table-layout {
    table-layout: fixed;
}

div.tabcontent {
    display: flex;
    flex-direction: column;
}

div.rdf-transform-tab-header {
    background: none repeat scroll 0 0 #E0EDFE;
    height: 21px;
    padding: 2px;
}

div.rdf-transform-data-transform {
/* 600 - 279 = 321
   25 less than preview due to extra bottom buttons
*/
    height: 321px;
    min-height: 321px;
    overflow: scroll;
    flex: 1 1 auto;
}

/*
table.rdf-transform-pane-table-layout > tbody > tr > td.padded {
    padding: 2px 2px;
}
*/

div.rdf-transform-tab-footer {
    background: none repeat scroll 0 0 #E0EDFE;
    height: 21px;
    padding: 2px;
}

div.rdf-transform-tab-footer > table {
    width: 100%;
}

div.rdf-transform-button-grp {
    display: inline-block;
    width: 100%;
}

button.rdf-transform-left {
    float: left;
    margin-right: 4px;
}
button.rdf-transform-center {
    float: center;
    margin-left: 4px;
}
button.rdf-transform-right {
    float: right;
    margin-left: 4px;
}

div.rdf-transform-data-preview {
/* 600 - 254 = 346
*/
    height: 346px;
    min-height: 346px;
    overflow: scroll;
    flex: 1 1 auto;
}

div.rdf-transform-data-preview pre {
    overflow-x: auto;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
}

div.rdf-transform-prefixes {
    /*
    width: 100%;
    */
}

div.rdf-transform-preview-settings {
    /*
    width: 100%;
    */
}

span.rdf-transform-prefix-box {
    padding: 0 4px;
    font-family: monospace;
    float: left;
    line-height: 21px;
    vertical-align: middle;
}

a.add-namespace-box {
    background-image: url(../images/add.png);
    background-repeat: no-repeat;
    background-position: 0px 0px;
    padding-left: 14px;
    margin-left: 4px;
    color: #0000EE;
}

a.manage-vocabularies-box {
    background-image: url(../images/configure.png);
    background-repeat: no-repeat;
    background-position: 0px 0px;
    padding-left: 14px;
    margin-left: 4px;
    color: #0000EE;
}

/*
 * RDF Transform UI Node Dialog
 */

.rdf-transform-node-dialog-step {
    margin: 0 5px 5px 5px;
    border: 1px solid #DDDDDD;
}

.rdf-transform-node-dialog-step-header {
    margin: 1px 5px 1px 0;
    padding: 2px;
    background: #DDDDFF;
    -moz-border-radius: 6px;
    border-radius: 6px;
}

/* NOT USED */
.rdf-transform-node-dialog-column-list {
    height: 300px;
    width: 230px;
    overflow: auto;
}

.rdf-transform-node-top-separated {
    border-top: 2px solid Black;
    padding-top: 2px;
}

.rdf-transform-node-top-padded {
    padding-top: 2px;
}

.rdf-transform-node-bottom-separated {
    padding-bottom: 2px;
    border-bottom: 2px solid Black;
}

.rdf-transform-node-bottom-padded {
    padding-bottom: 2px;
}

span.rdf-node-info {
    font-size: 80%;
}

span.rdf-value-expression {
    font-family: monospace;
    vertical-align: top;
}

/*
 * RDF Transform UI Node Dialog
 */

/*
a.rdf-transform-node,
span.rdf-transform-node-label {
}
*/

/*
 * RDF Transform UI Property Dialog
 */

/*
a.rdf-transform-property,
span.rdf-transform-property-label {
}
*/

td.rdf-transform-node-main,
td.rdf-transform-node-details,
td.rdf-transform-property-main,
td.rdf-transform-property-details {
    min-width: 150px;

}

td.rdf-transform-node-toggle,
td.rdf-transform-property-toggle {
    padding: 2px 4px;
}

/*
 * RDF Transform Dialog Flyouts
 */

div.rdf-flyout-content {
    color: Black;
}

div.rdf-flyout-content div.rdf-header {
    overflow-wrap: break-word;
    font-weight: bold;
    margin: 4px;
}

/*
 * RDF Transform Dialog Vocabulary Management
 */

img.vocab-action-icon {
    padding: 1px;
}

div.vocabulary-container {
    height: 300px;
    overflow: auto;
}

div.vocabulary-manager-list {
    height: 64%;
    overflow: auto;
}

div.vocabulary-manager-footer {
    height: 31%;
}

div.vocabulary-manager-footer h2 {
    margin: 0;
}


a#add-namespace-link,
a#add-namespace-link:HOVER,
a#add-namespace-link:VISITED {
    font-size: 120%;
    color: #0000FF;
}

table.rdf-transform-types-table {
    margin: 2px 0 2px 0;
}

table.rdf-transform-indented-table {
    margin: 0 0 0 24px;
}

table.rdf-transform-namespaces-table {
    width: 100%;
}

table.rdf-transform-namespaces-table,
table.rdf-transform-namespaces-table > tbody > tr > td {
    border: 1px dotted #DDDDDD;
    border-collapse: collapse;
    margin: 2px;
}

tr.rdf-transform-table-even {
    background-color: #F2F2F2;
}

tr.rdf-transform-table-odd {
    background-color: #DDDDDD;
}

/*
 * RDF Transform Dialog Prefix Management
 */
div.rdf-transform-prefix-note {
    font-size: 14px;
    color: #333333;/*#FF6A00;*/
}

fieldset.rdf-transform-prefix-fieldset {
    border: 1px solid #BBCCFF;
    padding: 2px 0 6px 2px;
    margin-top: 6px;
}

/*
 * RDF Transform Dialog Expression Preview
 */
 div.rdf-transform-exp-preview-frame {
    width:  700px;
    min-width:  700px;
}

